--- a/index.css
+++ b/index.css
@@ -1,3 +1,47 @@
-#heading {
-    color : red;
+.header {
+  display: flex;
+  border: 1px solid black;
+  justify-content: space-between;
+}
+
+.logo {
+  width: 150px;
+  padding: 10px;
+}
+
+.nav-items > ul {
+  font-size: 24px;
+  display: flex;
+  list-style-type: none;
+  padding: 0 10px;
+}
+
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
+}
+
+.res-card {
+  width: 200px;
+  background-color: #f0f0f0;
+  padding: 10px;
+  margin: 10px;
+}
+
+.res-card:hover {
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.searchBar {
+  padding: 10px;
+}
+
+.card-img {
+    width: 100%;
+}
+
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
 }
