--- a/index.css
+++ b/index.css
@@ -38,14 +38,36 @@
 }
 
 .card-img {
-    width: 100%;
+  width: 100%;
 }
 
 .res-container {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 .filter-btn {
   margin: 10px;
   cursor: pointer;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card {
+  width: 200px;
+  height: 350px;
+  background-color: #f0f0f0;
+  padding: 10px;
+  margin: 10px;
+}
+
+.login-btn {
+  padding: 15px;
+  margin: 15px;
+}
+
+.filter {
+  display: flex;
 }
